--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
 	<!-- Bootstrap -->
 	<link rel="stylesheet" href="css/bootstrap.css">
+
+	<!-- Owl -->
+	<link rel="stylesheet" href="css/owl.carousel.css">
 	
-	<!-- Font Awesome -->
-	<link rel="stylesheet" href="http://fontawesome.io/assets/font-awesome/css/font-awesome.css">
-	
-	<!-- Google Fonts -->
+	<!-- Fonts -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i">
 	
 	<!-- Custom CSS -->
@@ -32,20 +32,541 @@
 	<![endif]-->
 </head>
 <body>
+<!-- 	<header>
+		<div class="container">
+			<div class="col-lg-3">
+				<div class="hamb">
+					<span></span>
+				</div>
+			</div>
+			<div class="col-lg-6">
+				<div class="header_links">
+					<a href="#" class="ka">
+						<i></i>
+					</a>
+					<a href="#" class="flowers">
+						<i></i>
+					</a>
+					<a href="#" class="rafale">
+						<i></i>
+					</a>
+				</div>
+			</div>
+			<div class="col-lg-3">
+				<div class="header_contacts">
+					<a href="#" class="phone">
+						<span>+7 (777) 572-44-44</span>
+					</a>
+					<a href="#" class="wats">
+						<span>+7 (777) 572-44-44</span>
+					</a>
+				</div>
+			</div>
+		</div>
+	</header> -->
+
+	<div class="section_1">
+		<div class="container">
+			<div class="section_1_header">
+				<div class="container">
+					<div class="col-lg-3">
+						<div class="hamb">
+							<span></span>
+						</div>
+					</div>
+					<div class="col-lg-6">
+						<div class="header_links">
+							<a href="#" class="ka">
+								<i></i>
+							</a>
+							<a href="#" class="flowers">
+								<i></i>
+							</a>
+							<a href="#" class="rafale">
+								<i></i>
+							</a>
+						</div>
+					</div>
+					<div class="col-lg-3">
+						<div class="header_contacts">
+							<a href="#" class="phone">
+								<span>+7 (777) 572-44-44</span>
+							</a>
+							<a href="#" class="wats">
+								<span>+7 (777) 572-44-44</span>
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="content clearfix">
+				<div class="title">
+					<h1>Свежайшие букеты</h1>
+					<div class="text">от 5 000 тенге с доставкой за 40 минут по Алматы</div>
+				</div>
+				<div class="col-md-8 col-md-offset-2">
+					<form action="#" class="section_1_form">
+						<input class="secton_1_input" type="text" name="name" placeholder="Имя">
+						<input class="secton_1_input" type="text" name="phone" placeholder="Телефон">
+						<button class="section_1_submit" type="submit">Получить консультацию</button>
+					</form>
+				</div>
+				<div class="col-xs-12">
+					<div class="section_1_delivery">
+						<div class="text">Круглосуточная доставка цветов</div>
+						<div class="app_links">
+							<a href="#" class="appstore"></a>
+							<a href="#" class="googleplay"></a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="section_1_footer">
+				<form action="#" class="section_1_change_form">
+					<div class="section_1_footer_title">Выбрать букет</div>
+					<div class="section_1_drop_block">
+						<input type="hidden" name="cost" value="15000">
+						<div class="name">Цена</div>
+						<div class="sort"><span>15 000</span> тг и выше</div>
+						<ul class="drop">
+							<li data-value="15000">15 000</li>
+							<li data-value="12000">12 000</li>
+							<li data-value="7000">7 000</li>
+						</ul>
+					</div>
+					<div class="section_1_drop_block">
+						<input type="hidden" name="reason" value="prof">
+						<div class="name">Повод</div>
+						<div class="sort"><span>Профессиональные</span></div>
+						<ul class="drop">
+							<li data-value="prof">Профессиональные</li>
+							<li data-value="val2">Текст 2</li>
+							<li data-value="val3">Тест 3</li>
+						</ul>
+					</div>
+					<div class="section_1_drop_block">
+						<input type="hidden" name="who" value="colleague">
+						<div class="name">Кому</div>
+						<div class="sort"><span>Коллеге</span></div>
+						<ul class="drop">
+							<li data-value="colleague">Коллеге</li>
+							<li data-value="val2">Текст 2</li>
+							<li data-value="val3">Тест 3</li>
+						</ul>
+					</div>
+					<button type="submit" class="change">Выбрать букет</button>
+				</form>
+			</div>
+		</div>
+	</div>
+
+	<div class="section_2">
+		<div class="container">
+			<div class="row flex_row">
+				<div class="col-md-4">
+					<div class="item">
+						<div class="img_block">
+							<img src="images/block_2/1.jpg" alt="Лесная сказка">
+							<div class="fade">
+								<div class="item_info">Розы голландская - 13, Статица (Голландия) - 4, Рускус (Голландская) - 5, Флористическое оформление.</div>
+								<a href="#" class="button order">Заказать букет</a>
+							</div>
+						</div>
+						<div class="description">
+							<div class="name">Лесная сказка</div>
+							<div class="cost">19 686 тенге</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="item">
+						<div class="img_block">
+							<img src="images/block_2/2.jpg" alt="Букет Alice">
+							<div class="fade">
+								<div class="item_info">Розы голландская - 13, Статица (Голландия) - 4, Рускус (Голландская) - 5, Флористическое оформление.</div>
+								<a href="#" class="button order">Заказать букет</a>
+							</div>
+						</div>
+						<div class="description">
+							<div class="name">Букет Alice</div>
+							<div class="cost">20 729 тенге</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="item">
+						<div class="img_block">
+							<img src="images/block_2/3.jpg" alt="Букет Стелла">
+							<div class="fade">
+								<div class="item_info">Розы голландская - 13, Статица (Голландия) - 4, Рускус (Голландская) - 5, Флористическое оформление.</div>
+								<a href="#" class="button order">Заказать букет</a>
+							</div>
+						</div>
+						<div class="description">
+							<div class="name">Букет Стелла</div>
+							<div class="cost">19 358 тенге</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="item">
+						<div class="img_block">
+							<img src="images/block_2/4.jpg" alt="Лесная сказка">
+							<div class="fade">
+								<div class="item_info">Розы голландская - 13, Статица (Голландия) - 4, Рускус (Голландская) - 5, Флористическое оформление.</div>
+								<a href="#" class="button order">Заказать букет</a>
+							</div>
+						</div>
+						<div class="description">
+							<div class="name">Лесная сказка</div>
+							<div class="cost">19 686 тенге</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="item">
+						<div class="img_block">
+							<img src="images/block_2/5.jpg" alt="MONO 10.0">
+							<div class="fade">
+								<div class="item_info">Розы голландская - 13, Статица (Голландия) - 4, Рускус (Голландская) - 5, Флористическое оформление.</div>
+								<a href="#" class="button order">Заказать букет</a>
+							</div>
+						</div>
+						<div class="description">
+							<div class="name">MONO 10.0</div>
+							<div class="cost">20 729 тенге</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="item">
+						<div class="img_block">
+							<img src="images/block_2/6.jpg" alt="Букет Стелла">
+							<div class="fade">
+								<div class="item_info">Розы голландская - 13, Статица (Голландия) - 4, Рускус (Голландская) - 5, Флористическое оформление.</div>
+								<a href="#" class="button order">Заказать букет</a>
+							</div>
+						</div>
+						<div class="description">
+							<div class="name">Букет Стелла</div>
+							<div class="cost">19 358 тенге</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="center_block">
+				<a href="#" class="show_all button">Все букеты</a>
+				<div class="more">При заказе от <strong>10 000 тенге</strong> - доставка <strong>бесплатно</strong></div>
+			</div>
+		</div>
+	</div>
+
+	<div class="section_3">
+		<div class="bg_block"></div>
+		<div class="container">
+			<div class="col-md-7 col-md-offset-5 title_offset">
+				<div class="title">
+					<div class="h2">Акция</div>
+					<div class="text">Акция “Доброе утро” от Rafale! Закажите цветочную композицию и получите кофе в подарок!</div>
+				</div>
+			</div>
+			<div class="row flex_row">
+				<div class="col-md-4">
+					<div class="item">
+						<div class="img_block">
+							<img src="images/block_3/1.jpg" alt="ROSE">
+						</div>
+						<div class="name">ROSE</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="item">
+						<div class="img_block">
+							<img src="images/block_3/2.jpg" alt="CLUTCH">
+						</div>
+						<div class="name">CLUTCH</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="item">
+						<div class="img_block">
+							<img src="images/block_3/3.jpg" alt="CONE">
+						</div>
+						<div class="name">CONE</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="section_4">
+		<div class="container">
+			<div class="clearfix title_block">
+				<div class="col-md-7">
+					<div class="title">
+						<div class="text">цветы в пакетах</div>
+						<div class="h2">Спецпредложения от Rafale</div>
+					</div>
+				</div>
+			</div>
+			<div class="row flex_row">
+				<div class="col-md-4">
+					<div class="item item_1">
+						<div class="img_block">
+							<img src="images/block_4/1.jpg" alt="CONE">
+							<div class="fade">
+								<a href="#" class="button order">Заказать букет</a>
+							</div>
+						</div>
+						<div class="name">Цветы в пакетах 1</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="item item_2">
+						<div class="img_block">
+							<img src="images/block_4/2.jpg" alt="CONE">
+							<div class="fade">
+								<a href="#" class="button order">Заказать букет</a>
+							</div>
+						</div>
+						<div class="name">Цветы в пакетах 2</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="item item_3">
+						<div class="img_block">
+							<img src="images/block_4/3.jpg" alt="CONE">
+							<div class="fade">
+								<a href="#" class="button order">Заказать букет</a>
+							</div>
+						</div>
+						<div class="name">Цветы в пакетах 3</div>
+					</div>
+				</div>
+			</div>
+			<div class="clearfix button_block">
+				<a href="#" class="button">Перейти в магазин</a>
+			</div>
+		</div>
+	</div>
+
+	<div class="section_5">
+		<div class="container">
+			<div class="title">
+				<div class="h2">Соберите букет</div>
+			</div>
+			<form action="#" methd="post" class="row flex_row">
+				<div class="col-md-7 col-md-offset-1">
+					<div class="content">
+						<div class="vertical_scale">
+							<a href="#">100 см</a>
+							<a href="#">80 см</a>
+							<a class="active" href="#">60 см</a>
+							<a href="#">50 см</a>
+							<a href="#">40 см</a>
+						</div>
+						<img src="images/block_5/bg.png" alt="букет">
+					</div>					
+				</div>
+				<div class="col-md-4 z-index">
+					<div class="order_block">
+						<div class="fieldset white">
+							<label>
+								<input type="checkbox" class="check">
+								<span class="custom_check"></span>
+								<span class="text">Белая роза</span>
+							</label>
+							<div class="counter_block">
+								<div class="counter">
+									<button type="button" class="minus">-</button>
+									<input type="text" class="panel" value="0">
+									<button type="button" class="plus">+</button>	
+								</div>					
+							</div>
+						</div>
+						<div class="fieldset red">
+							<label>
+								<input type="checkbox" class="check">
+								<span class="custom_check"></span>
+								<span class="text">Красная роза</span>
+							</label>
+							<div class="counter_block">
+								<div class="counter">
+									<button type="button" class="minus">-</button>
+									<input type="text" class="panel" value="0">
+									<button type="button" class="plus">+</button>	
+								</div>					
+							</div>
+						</div>
+						<div class="fieldset razz">
+							<label>
+								<input type="checkbox" class="check">
+								<span class="custom_check"></span>
+								<span class="text">Малиновая роза</span>
+							</label>
+							<div class="counter_block">
+								<div class="counter">
+									<button type="button" class="minus">-</button>
+									<input type="text" class="panel" value="0">
+									<button type="button" class="plus">+</button>	
+								</div>					
+							</div>
+						</div>
+						<div class="fieldset lilac">
+							<label>
+								<input type="checkbox" class="check">
+								<span class="custom_check"></span>
+								<span class="text">Сиреневая роза</span>
+							</label>
+							<div class="counter_block">
+								<div class="counter">
+									<button type="button" class="minus">-</button>
+									<input type="text" class="panel" value="0">
+									<button type="button" class="plus">+</button>	
+								</div>					
+							</div>
+						</div>
+
+						<div class="summa"><span>20 729</span> тенге</div>
+
+						<button type="submit" class="button order">Заказать букет</button>
+					</div>
+				</div>	
+			</form>
+			<div class="blur"></div>
+		</div>
+	</div>
+
+	<div class="section_6">
+		<div class="bg"></div>
+		<div class="container">
+			<div class="row flex_row">
+				<div class="col-md-8">
+					<div class="title">
+						<div class="h2">Дополнительные предложения</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="controlls">
+						<div class="number">
+							<span class="current">1</span>
+							<span class="sep">/</span>
+							<span class="sum">1</span>
+						</div>
+						<div class="links">
+							<button class="prev">&larr;</button>
+							<button class="next">&rarr;</button>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="carousel">
+				<div class="owl-carousel owl-theme">
+				    <div class="item">
+				    	<div class="img-block">
+				    		<img src="images/block_6/1.jpg" alt="1">
+				    	</div>
+				    </div>
+				    <div class="item">
+				    	<div class="img-block">
+				    		<img src="images/block_6/2.jpg" alt="2">
+				    	</div>
+				    </div>
+				    <div class="item">
+				    	<div class="img-block">
+				    		<img src="images/block_6/3.jpg" alt="3">
+				    	</div>
+				    </div>
+				    <div class="item">
+				    	<div class="img-block">
+				    		<img src="images/block_6/4.jpg" alt="4">
+				    	</div>
+				    </div>
+				    <div class="item">
+				    	<div class="img-block">
+				    		<img src="images/block_6/1.jpg" alt="5">
+				    	</div>
+				    </div>
+				    <div class="item">
+				    	<div class="img-block">
+				    		<img src="images/block_6/2.jpg" alt="6">
+				    	</div>
+				    </div>
+				    <div class="item">
+				    	<div class="img-block">
+				    		<img src="images/block_6/3.jpg" alt="7">
+				    	</div>
+				    </div>
+				    <div class="item">
+				    	<div class="img-block">
+				    		<img src="images/block_6/4.jpg" alt="8">
+				    	</div>
+				    </div>
+				    <div class="item">
+				    	<div class="img-block">
+				    		<img src="images/block_6/1.jpg" alt="9">
+				    	</div>
+				    </div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="section_7">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-5">
+					<div class="title">
+						<div class="h2">Контаты</div>
+					</div>
+					<div class="adress_info">050020, г. Алматы,<br> Проспект Сейфуллина, 546, офис 107</div>
+				</div>
+				<div class="col-md-7">
+					<div id="map"></div>
+				</div>
+			</div>
+			<div class="row translate_row">
+				<div class="col-md-7">
+					<div class="contact_form_block">
+						<div class="h2">Остались вопросы?</div>
+						<form action="#" class="contact_form">
+							<input class="contact_form_input" type="text" placeholder="Имя">
+							<input class="contact_form_input" type="text" placeholder="Телефон">
+							<button class="contact_form_submit" type="submit">Получить консультацию</button>
+						</form>
+					</div>
+				</div>
+				<div class="col-md-4 col-md-offset-1">
+					<div class="contact_info">
+						<div class="contact">
+							<div class="text">Отдел Продаж. Круглосуточно.</div>
+							<a href="#">+7 (777) 572-44-44</a>
+						</div>
+						<div class="contact">
+							<div class="text">Whatsapp. Круглосуточно.</div>
+							<a href="#">+7 (777) 572-44-44</a>
+						</div>
+						<div class="contact">
+							<div class="text">E-Mail</div>
+							<a href="#">sales@zakazbuketov.kz</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
 
 
-
-	<!-- Комментарий для следующих блоков
-	================================================== -->
-	
 
 
 
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+	<script src="js/owl.carousel.min.js"></script>
+	<script src="js/main.js"></script>
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
-	<script src="js/bootstrap.min.js"></script>
 	
 </body>
 </html>
